load("//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "testlib",
    srcs = ["BasicTestUtil.kt"],
    friend = "//examples/dagger/src/heating",
    deps = [
        "//examples/dagger/src/heating",
    ],
)

kt_jvm_test(
    name = "BasicTest",
    srcs = ["BasicTest.kt"],
    friends = [":testlib"],  # old syntax
    deps = [
        ":testlib",
        "//examples/dagger/src/heating",
        "@kotlin_rules_maven//:com_google_truth_truth",
        "@kotlin_rules_maven//:junit_junit",
    ],
)
